--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,7 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
@@ -13,7 +9,6 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
   background-color: #f2f2f2;
   display: flex;
   position: relative;
@@ -41,10 +36,10 @@
 
 .header__subtitle {
   position: absolute;
-  align-self: flex-end;
   width: 388px;
   left: 64px;
   bottom: 30px;
+  margin: 0;
   z-index: 2;
   line-height: 25px;
   font-size: 18px;
@@ -124,7 +119,7 @@
 
 .section-title {
   width: 60%;
-  margin: 0 0 20px;
+  margin: 0 auto 20px;
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
@@ -137,7 +132,7 @@
   font-size: 24px;
   font-weight: normal;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .table {
@@ -145,7 +140,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 0 0 100px;
+  margin: 0 auto 100px;
 }
 
 .table__cell {
@@ -242,6 +237,8 @@
   background-image: url(../images/kaufman-triangle.svg);
   background-size: cover;
   right: -210px;
+  top: 0;
+  bottom: 0;
   height: 877px;
   width: 877px;
   position: absolute;
@@ -250,23 +247,25 @@
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  margin: 80px 0 0;
 }
 
 .table_theme_dark {
+  margin: 0;
   z-index: 2;
 }
 
 .footer {
-  margin:0;
+  min-height: 350px;
+  margin: 0;
   padding-top: 60px;
   padding-bottom: 40px;
   background-color: black;
+  display: flex;
+  box-sizing: border-box;
 }
 
 .footer__columns {
-  min-height: 350px;
   margin: 0 auto;
   padding: 0;
   width: 90%;
@@ -292,6 +291,7 @@
   font-size: 18px;
   font-weight: normal;
   margin: 18px 0;
+  padding: 0;
 }
 
 .footer__column-heading {
@@ -305,7 +305,6 @@
 .footer__column-links {
   display: flex;
   flex-direction: column;
-  align-self: flex-end;
   margin: 0;
   padding: 0;
 }
